<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

  <!-- Light -->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/light_event_info"/>

  <TextView
      android:id="@+id/light_event_output"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sensor_no_events"/>

  <!-- Heart Rate -->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/heart_rate_event_info"/>

  <TextView
      android:id="@+id/heart_rate_event_output"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sensor_no_events"/>

  <!-- Magnetic Field -->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/magnetic_field_event_info"/>

  <TextView
      android:id="@+id/magnetic_field_event_output"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sensor_no_events"/>

  <!-- Significant Motion -->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/significant_motion_event_info"/>

  <TextView
      android:id="@+id/significant_motion_event_output"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sensor_no_events"/>

  <!-- Accelerometer -->
  <ToggleButton
      android:id="@+id/accelerometer_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:checked="false"
      android:textOff="@string/accelerometer_off"
      android:textOn="@string/accelerometer_on"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/accelerometer_event_info"/>

  <TextView
      android:id="@+id/accelerometer_event_output"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sensor_not_bound"/>

</LinearLayout>
